# NewBikeComputer

./: BottomSpacer.py  LICENSE  NewBikeComputer.fzz  NewBikeComputerCover.py  README.md  Upload.sh  build.sh
BikeHost/: Makefile.am  configure.ac
BikeHost/BuildData/: Makefile.am
BikeHost/BuildScripts/: Makefile.am
BikeHost/Docs/: Doxyfile.in  Doxyfile.in.bak  Help.h  Makefile.am  Tutorial.h  Version.h  Version.h.in  contents.h  copying.h  removenavrow1.sed
BikeHost/Scripts/: BikeHost.tcl  Makefile  Makefile.am  Makefile.in  snitStdMenuBar.tcl
BikeHost/m4/: ax_tcl_libraries.m4
NewBikeComputer/: BikeNVS.h  Modes.cpp  Modes.h  NewBikeComputer.ino  PersistentTripDatabase.cpp  PersistentTripDatabase.h  SerialCLI.cpp  SerialCLI.h  Wheelsensor.cpp  Wheelsensor.h
