EXTRA_DIST= close.gif info.xbm print.gif snitLFs.tcl DeepwoodsBanner.gif  \
            questhead.xbm snitlistbox.tcl DynamicHelp.tcl new.gif save.gif \
            snitmainframe.tcl gettext.tcl openfold.png snitbuttonbox.tcl \
            snitrotext.tcl gray50.xbm open.gif snitdialog.tcl snitscrollw.tcl \
            IconsAndImages.tcl palette.png snitHTMLHelp.tcl snitStdMenuBar.tcl
